--- a/pages/user/index.wxml
+++ b/pages/user/index.wxml
@@ -1,2 +1,26 @@
 <!--pages/user/index.wxml-->
-<text>pages/user/index.wxml</text>
+
+<view>
+  <view class="userinfoImg" bindtap="bindViewTap">
+      <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
+      <view class="userinfo-nickname">{{userInfo.nickName}}</view>
+  </view>
+  <view class="userinfo">
+    <view bindtap="linkOrder">
+      我的订单
+      <view class="triangle-facing-right"></view>
+    </view>
+    <view bindtap="linkAddress">
+      收货地址
+      <view class="triangle-facing-right"></view>
+    </view>
+    <view bindtap="linkCoupon">
+      优惠券
+      <view class="triangle-facing-right"></view>
+    </view>
+    <view bindtap="linkShare">
+      推荐给好友
+      <view class="triangle-facing-right"></view>
+    </view>
+  </view>
+</view>
