--- a/pages/login/index.wxss
+++ b/pages/login/index.wxss
@@ -1,1 +1,44 @@
 /* pages/login/index.wxss */
+
+.logoImg {
+  width: 100rpx;
+  height: 62rpx;
+  position: absolute;
+  top: 10rpx;
+  right: 50rpx;
+}
+.weui-article__h3{
+  color: #ff6319;
+}
+.dot {
+  background: #ff6319;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  margin-right: 10rpx;
+  margin-top: 8px;
+}
+
+.float_left {
+  float: left;
+}
+
+.footer_img {
+  width: 33.3%;
+  height: 80rpx;
+}
+
+.float_text {
+  width: 33.3%;
+  line-height: 80rpx;
+  color: #ff6319;
+}
+
+.page_padding {
+  padding: 0 20rpx 80rpx 20rpx;
+}
+
+.orange_color {
+  background: #ff6319;
+  color: #fff;
+}
