--- a/pages/login/register/register.wxml
+++ b/pages/login/register/register.wxml
@@ -20,7 +20,7 @@
   </view>
 
   <view class="readed">
-    <image src="../../../img/check.png"></image>
+    <image src="../../../img/success.png"></image>
     <view>已阅读并同意成为
       <navigator>丹道·小二协议</navigator>, 接受免除或限制责任、诉讼管辖预定等条款 </view>
   </view>
