--- a/pages/login/register/register.wxss
+++ b/pages/login/register/register.wxss
@@ -50,8 +50,9 @@
   margin-top: 120rpx;
 }
 .readed>image{
-  width: 56rpx;
-  height: 40rpx;
+  width: 36rpx;
+  height: 36rpx;
+  margin-right: 10rpx;
   display: block;
   float: left;
 }
