--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,2 +1,12 @@
 <!--index.wxml-->
-<text>index.wxml</text>
+<swiper indicator-dots="{{indicatorDots}}"
+  autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
+  <block wx:for="{{imgUrls}}" wx:for-item="item" wx:key="navItems">
+    <swiper-item>
+      <image src="{{item}}" class="slide-image"/>
+    </swiper-item>
+  </block>
+</swiper>
+
+
+<!-- <button bindtap='linkDetails'>sdsd</button> -->
