--- a/pages/user/address/address.wxml
+++ b/pages/user/address/address.wxml
@@ -1,2 +1,153 @@
 <!--pages/user/address/address.wxml-->
-<text>pages/user/address/address.wxml</text>
+<view class="page">
+
+  <view class="page__bd margin_bottom">
+    <view class="weui-panel weui-panel_access">
+
+
+      <!-- <view class="weui-panel__hd">图文组合列表</view> -->
+      <view class="weui-panel__bd">
+        <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+            <view class="weui-media-box__title">
+              <text>谁是大傻蛋</text>
+              <text class="float_right">15222222222</text> </view>
+            <view class="weui-media-box__title">
+              <text>陕西省西安市碑林区XXXXXXXXXX</text>
+            </view>
+
+          </view>
+        </navigator>
+        <view class="button_view clear">
+          <view class="isCheck float_left">
+            <!-- <image src="../../../img/success.png"></image> -->
+            <radio color="#FF6319" checked="true" />设为默认地址
+          </view>
+          <button size="mini">编辑</button>
+          <button size="mini">删除</button>
+        </view>
+      </view>
+
+
+
+      <view class="weui-panel__bd">
+        <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+            <view class="weui-media-box__title">
+              <text>谁是大傻蛋</text>
+              <text class="float_right">15222222222</text> </view>
+            <view class="weui-media-box__title">
+              <text>陕西省西安市碑林区XXXXXXXXXX</text>
+            </view>
+
+          </view>
+        </navigator>
+        <view class="button_view clear">
+          <view class="isCheck float_left">
+            <!-- <image src="../../../img/success.png"></image> -->
+            <radio color="#FF6319" />设为默认地址
+          </view>
+          <button size="mini">编辑</button>
+          <button size="mini">删除</button>
+        </view>
+      </view>
+
+      <view class="weui-panel__bd">
+        <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+            <view class="weui-media-box__title">
+              <text>谁是大傻蛋</text>
+              <text class="float_right">15222222222</text> </view>
+            <view class="weui-media-box__title">
+              <text>陕西省西安市碑林区XXXXXXXXXX</text>
+            </view>
+
+          </view>
+        </navigator>
+        <view class="button_view clear">
+          <view class="isCheck float_left">
+            <!-- <image src="../../../img/success.png"></image> -->
+            <radio color="#FF6319" />设为默认地址
+          </view>
+          <button size="mini">编辑</button>
+          <button size="mini">删除</button>
+        </view>
+      </view>
+
+
+      <view class="weui-panel__bd">
+        <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+            <view class="weui-media-box__title">
+              <text>谁是大傻蛋</text>
+              <text class="float_right">15222222222</text> </view>
+            <view class="weui-media-box__title">
+              <text>陕西省西安市碑林区XXXXXXXXXX</text>
+            </view>
+
+          </view>
+        </navigator>
+        <view class="button_view clear">
+          <view class="isCheck float_left">
+            <!-- <image src="../../../img/success.png"></image> -->
+            <radio color="#FF6319" />设为默认地址
+          </view>
+          <button size="mini">编辑</button>
+          <button size="mini">删除</button>
+        </view>
+      </view>
+
+
+      <view class="weui-panel__bd">
+        <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+            <view class="weui-media-box__title">
+              <text>谁是大傻蛋</text>
+              <text class="float_right">15222222222</text> </view>
+            <view class="weui-media-box__title">
+              <text>陕西省西安市碑林区XXXXXXXXXX</text>
+            </view>
+
+          </view>
+        </navigator>
+        <view class="button_view clear">
+          <view class="isCheck float_left">
+            <!-- <image src="../../../img/success.png"></image> -->
+            <radio color="#FF6319" />设为默认地址
+          </view>
+          <button size="mini">编辑</button>
+          <button size="mini">删除</button>
+        </view>
+      </view>
+
+
+      <view class="weui-panel__bd">
+        <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+            <view class="weui-media-box__title">
+              <text>谁是大傻蛋</text>
+              <text class="float_right">15222222222</text> </view>
+            <view class="weui-media-box__title">
+              <text>陕西省西安市碑林区XXXXXXXXXX</text>
+            </view>
+
+          </view>
+        </navigator>
+        <view class="button_view clear">
+          <view class="isCheck float_left">
+            <!-- <image src="../../../img/success.png"></image> -->
+            <radio color="#FF6319" />设为默认地址
+          </view>
+          <button size="mini">编辑</button>
+          <button size="mini">删除</button>
+        </view>
+      </view>
+
+
+    </view>
+  </view>
+
+  <view class="reative_bottom">
+    <button class="weui-btn orange_color" size="default" bindtap="toLinkAddAddr"> 新增收货地址</button>
+  </view>
+</view>
