--- a/pages/user/address/address.wxss
+++ b/pages/user/address/address.wxss
@@ -1,1 +1,48 @@
 /* pages/user/address/address.wxss */
+.margin_bottom{
+  margin-bottom: 50px;
+}
+.text_ringht {
+  text-align: right;
+}
+
+.float_left {
+  float: left;
+}
+
+.float_right {
+  float: right;
+}
+
+.clear {
+  clear: both;
+}
+
+.isCheck>image {
+  width: 22px;
+  height: 22px;
+  margin: 9px 0 0 10px;
+}
+.isCheck radio{
+  margin: 6px 5px 0 10px;
+}
+.button_view {
+  text-align: right;
+  border-radius: 0;
+  border-top: 1px solid #e0e0e0;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.button_view button{
+  margin: 6px 10px 0 0;
+}
+.reative_bottom{
+  width: 100%;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+}
+.orange_color{
+  background: #FF6319;
+  color: #fff;
+}
