--- a/pages/login/authentication/authentication.wxml
+++ b/pages/login/authentication/authentication.wxml
@@ -1,4 +1,5 @@
 <!--pages/login/authentication/authentication.wxml-->
+<view class="body_bg"></view>
 <view class="page page_padding">
 
   <view class="margin_top40">
