--- a/pages/login/index.wxml
+++ b/pages/login/index.wxml
@@ -1,4 +1,5 @@
 <!--pages/login/index.wxml-->
+<view class="body_bg"></view>
 <view class="page">
   <view class="page__bd">
     <view class="weui-article">
