--- a/pages/login/register/register.wxml
+++ b/pages/login/register/register.wxml
@@ -1,4 +1,5 @@
 <!--pages/login/register/register.wxml-->
+<view class="body_bg"></view>
 <view class="page page_padding">
   <view class="page_header">
     <image src="../../../img/logo.png"></image>
