--- a/pages/user/addAddress/addAddress.wxml
+++ b/pages/user/addAddress/addAddress.wxml
@@ -1,16 +1,74 @@
 <!--pages/user/addAddress/addAddress.wxml-->
+<view class="body_bg"></view>
 <view class="page">
-
   <view class="page__bd">
-    
-    <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cell weui-cell_access">
-        <view class="weui-cell__bd">单行列表</view>
-        <view class="weui-cell__ft weui-cell__ft_in-access" style="font-size: 0">
-          <view style="display: inline-block;vertical-align:middle; font-size: 17px;">详细信息</view>
-          <view class="weui-badge weui-badge_dot" style="margin-left: 5px;margin-right: 5px;"></view>
+
+    <view class="weui-cells one_weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input weui-cell_warn">
+        <view class="weui-cell__hd">
+          <view class="_weui-label">收货人姓名</view>
+        </view>
+        <view class="weui-cell__bd">
+          <input class="weui-input" placeholder="" />
         </view>
       </view>
+    </view>
+
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input weui-cell_warn">
+        <view class="weui-cell__hd">
+          <view class="_weui-label">手机号码</view>
+        </view>
+        <view class="weui-cell__bd">
+          <input class="weui-input" placeholder="" />
+        </view>
+      </view>
+    </view>
+
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input weui-cell_warn">
+        <view class="weui-cell__hd">
+          <view class="_weui-label">省、市、区</view>
+        </view>
+        <view class="weui-cell__bd">
+          <input class="weui-input" placeholder="" />
+        </view>
+      </view>
+    </view>
+
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input weui-cell_warn">
+        <view class="weui-cell__hd">
+          <view class="_weui-label">街道</view>
+        </view>
+        <view class="weui-cell__bd">
+          <input class="weui-input" placeholder="" />
+        </view>
+      </view>
+    </view>
+
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input weui-cell_warn">
+        <view class="weui-cell__hd">
+          <view class="_weui-label">邮政编码</view>
+        </view>
+        <view class="weui-cell__bd">
+          <input class="weui-input" placeholder="" />
+        </view>
+      </view>
+    </view>
+
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell">
+        <view class="weui-cell__bd">
+        <view class="_weui-label">详细地址</view>
+          <textarea class="weui-textarea" placeholder="" style="height: 3.3em" />
+        </view>
+      </view>
+    </view>
+
+    <view class="weui-btn-area">
+      <button class="weui-btn orange_color"  bindtap="showTopTips">保存</button>
     </view>
 
   </view>
