--- a/pages/user/address/address.wxml
+++ b/pages/user/address/address.wxml
@@ -1,4 +1,5 @@
 <!--pages/user/address/address.wxml-->
+<view class="body_bg"></view>
 <view class="page">
 
   <view class="page__bd margin_bottom">
