--- a/pages/user/coupon/coupon.wxml
+++ b/pages/user/coupon/coupon.wxml
@@ -1,2 +1,52 @@
 <!--pages/user/coupon/coupon.wxml-->
-<text>pages/user/coupon/coupon.wxml</text>
+<view class="body_bg"></view>
+<view class="page">
+  <view class="page__bd paddig_lR">
+
+    <view class="couponBox" style='background: #fff;'>
+      <view class="couponMon">代金券
+        <text>10</text>元（满50元可用）</view>
+      <view class="couponTim">有效期至
+        <text>2017-12-19</text> </view>
+    </view>
+
+    <view class="couponBox" style='background: #fff;'>
+      <view class="couponMon">代金券
+        <text>10</text>元（满50元可用）</view>
+      <view class="couponTim">有效期至
+        <text>2017-12-19</text> </view>
+    </view>
+    <view class="couponBox" style='background: #fff;'>
+      <view class="couponMon">代金券
+        <text>10</text>元（满50元可用）</view>
+      <view class="couponTim">有效期至
+        <text>2017-12-19</text> </view>
+    </view>
+    <view class="couponBox" style='background: #fff;'>
+      <view class="couponMon">代金券
+        <text>10</text>元（满50元可用）</view>
+      <view class="couponTim">有效期至
+        <text>2017-12-19</text> </view>
+    </view>
+    <view class="couponBox" style='background: #fff;'>
+      <view class="couponMon">代金券
+        <text>10</text>元（满50元可用）</view>
+      <view class="couponTim">有效期至
+        <text>2017-12-19</text> </view>
+    </view>
+    <view class="couponBox" style='background: #fff;'>
+      <view class="couponMon">代金券
+        <text>10</text>元（满50元可用）</view>
+      <view class="couponTim">有效期至
+        <text>2017-12-19</text> </view>
+    </view>
+    <view class="couponBox" style='background: #fff;'>
+      <view class="couponMon">代金券
+        <text>10</text>元（满50元可用）</view>
+      <view class="couponTim">有效期至
+        <text>2017-12-19</text> </view>
+    </view>
+
+
+  </view>
+</view>
