--- a/pages/user/index.wxml
+++ b/pages/user/index.wxml
@@ -1,26 +1,28 @@
 <!--pages/user/index.wxml-->
-
-<view>
-  <view class="userinfoImg" bindtap="bindViewTap">
+<view class="body_bg"></view>
+<view class="page">
+  <view class="page__bd">
+    <view class="userinfoImg" bindtap="bindViewTap">
       <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
       <view class="userinfo-nickname">{{userInfo.nickName}}</view>
-  </view>
-  <view class="userinfo">
-    <view bindtap="linkOrder">
-      我的订单
-      <view class="triangle-facing-right"></view>
     </view>
-    <view bindtap="linkAddress">
-      收货地址
-      <view class="triangle-facing-right"></view>
-    </view>
-    <view bindtap="linkCoupon">
-      优惠券
-      <view class="triangle-facing-right"></view>
-    </view>
-    <view bindtap="linkShare">
-      推荐给好友
-      <view class="triangle-facing-right"></view>
+    <view class="userinfo">
+      <view bindtap="linkOrder">
+        我的订单
+        <view class="triangle-facing-right"></view>
+      </view>
+      <view bindtap="linkAddress">
+        收货地址
+        <view class="triangle-facing-right"></view>
+      </view>
+      <view bindtap="linkCoupon">
+        优惠券
+        <view class="triangle-facing-right"></view>
+      </view>
+      <view bindtap="linkShare">
+        推荐给好友
+        <view class="triangle-facing-right"></view>
+      </view>
     </view>
   </view>
 </view>
