--- a/pages/user/index.wxss
+++ b/pages/user/index.wxss
@@ -1,6 +1,7 @@
 /* pages/user/index.wxss */
+
 .userinfoImg {
-  background:  #FF6319;
+  background: #ff6319;
   color: #fff;
   height: 240rpx;
 }
@@ -14,40 +15,50 @@
   float: left;
   border: 1px solid #dedede;
 }
+
 .userinfoImg .userinfo-nickname {
   float: left;
   margin-top: 10rpx;
   line-height: 240rpx;
 }
+
 .userinfoImg .userinfo-nickname:nth-of-type(1) {
   font-weight: bold;
 }
+
 .usermotto {
   margin-top: 200px;
 }
-.userinfo{
+
+.userinfo {
   width: 100%;
   text-align: left;
+  background: #fff;
 }
-.userinfo image{
+
+.userinfo image {
   width: 44rpx;
   height: 44rpx;
   vertical-align: middle;
   margin-bottom: 10rpx;
   margin-right: 20rpx;
 }
-.userinfo>view{
- padding: 30rpx 40rpx 20rpx 30rpx;
- border-top: 1px solid #dedede;
+
+.userinfo>view {
+  padding: 30rpx 40rpx 20rpx 30rpx;
+  border-top: 1px solid #dedede;
 }
-.userinfo>view:last-child{
- border-bottom: 1px solid #dedede;
+
+.userinfo>view:last-child {
+  border-bottom: 1px solid #dedede;
 }
-.authentication{
+
+.authentication {
   float: right;
   margin-right: 10rpx;
   color: #aaa;
 }
+
 .triangle-facing-right {
   display: inline-block;
   float: right;
@@ -57,5 +68,5 @@
   height: 20rpx;
   color: #bbb;
   transform: rotate(-45deg);
-  margin-top: .36rem;
+  margin-top: 0.36rem;
 }
