--- a/pages/user/order/order.wxml
+++ b/pages/user/order/order.wxml
@@ -1,4 +1,5 @@
 <!--pages/user/order/order.wxml-->
+<view class="body_bg"></view>
 <view class="page">
   <view class="page__bd">
     <view class="weui-panel weui-panel_access">
