--- a/pages/shoppingCar/index.wxss
+++ b/pages/shoppingCar/index.wxss
@@ -1,1 +1,51 @@
 /* pages/shoppingcar/index.wxss */
+.page_padding {
+  padding: 0 30rpx;
+}
+.page_header{
+   text-align: center;
+   margin-top: 240rpx;
+   color: #999;
+}
+.page_header>image{
+  width: 200rpx;
+  height: 200rpx;
+}
+
+
+.padding_b{
+  padding-bottom: 100rpx;
+}
+.title{
+  height: 80rpx;
+  padding: 0 30rpx;
+  line-height: 80rpx;
+}
+.text_right{
+  text-align: right;
+}
+.float_left{
+  float: left;
+}
+.float_right{
+  float: right;
+}
+.bottom_way{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  height: 100rpx;
+  width: 100%;
+  line-height: 100rpx;
+  z-index: 99;
+}
+.fl_left{
+  width: 70%;
+  background: #fff;
+}
+.fl_right{
+  width: 30%;
+  text-align: center;
+  color: #fff;
+  background: #FF6319;
+}
