--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,4 +1,30 @@
-.slide-image{
+.slide-image {
   width: 100%;
   height: 100%;
+}
+
+.index_navBar {
+  background-color: #f6f6f6;
+}
+
+.placeholder {
+  margin: 5px;
+  padding: 0 10px;
+  text-align: center;
+  line-height: 2.3em;
+}
+
+.navBar_line_height{
+  line-height: 2.42em;
+}
+
+.active {
+  color: #ff6319;
+}
+
+.def {
+  position: relative;
+  top: 15rpx;
+  width: 60rpx;
+  height: 60rpx;
 }
