--- a/app.wxss
+++ b/app.wxss
@@ -2,14 +2,18 @@
 @import 'libs/css/weui.wxss';
 
 .container {
-  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  min-height: 100%;
   justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
+  font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
+}
+
+.page-body {
+  width: 100%;
+  flex-grow: 1;
+  overflow-x: hidden;
+}
 
 .body_bg{
   position: fixed;
