--- a/pages/index/details/details.wxss
+++ b/pages/index/details/details.wxss
@@ -1,1 +1,63 @@
-/* pages/index/details/details.wxss */
+.slide-image {
+  width: 100%;
+  height: 100%;
+}
+.placeholder {
+  margin: 5px;
+  padding: 0 10px;
+  text-align: center;
+  line-height: 2em;
+  font-size: 30rpx;
+  color: #ccc;
+}
+.weui-flex{
+  border-bottom: 10rpx solid #ccc
+}
+swiper {
+  height: 600rpx;
+}
+
+.page__bd {
+  height: 100%;
+}
+
+.page__bd {
+  padding-bottom: 0;
+}
+
+.details__shop__content {
+  width: 100%;
+  padding: 20rpx 55rpx;
+  border-bottom: 1rpx solid #ccc;
+}
+
+.details__shop__price__content {
+  font-size: 35rpx;
+}
+
+.details__shop__price {
+  color: #ff6319;
+  font-weight: 900;
+  font-size: 40rpx;
+}
+
+.details__shop__wholesale__price {
+  margin-left: 40rpx;
+}
+
+.weui-tab__content {
+  padding-top: 60px;
+  text-align: center;
+}
+
+.weui-navbar {
+  border-top: 2rpx solid #ccc;
+}
+
+.weui-navbar__title {
+  font-size: 30rpx;
+}
+
+.weui-navbar__border__right {
+  border-right: 1rpx solid #ccc;
+}
