--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,7 +5,7 @@
     <!-- swiper -->
     <view class="swiper">
       <swiper indicator-dots="{{swiperData.indicatorDots}}" autoplay="{{swiperData.autoplay}}" interval="{{swiperData.interval}}" duration="{{swiperData.duration}}">
-        <block wx:for="{{imgUrls}}" wx:key="*this">
+        <block wx:for="{{imgUrls}}" wx:key="*this" bindtap='linkDetails'>
           <swiper-item>
             <image src="{{item}}" class="slide-image" />
           </swiper-item>
@@ -44,7 +44,7 @@
 
     <!-- shop -->
     <view class='shop__list__container'>
-      <view class='shop__list' wx:for="{{[1,2,3,4,5,6,7]}}" wx:key='*this'>
+      <view class='shop__list' wx:for="{{[1,2,3,4,5,6,7]}}" wx:key='*this' bindtap='linkDetails'>
         <image src='../../img/listDef.png' />
         <view class='shop__text'>
           <view>商品名称</view>
