--- a/app.wxss
+++ b/app.wxss
@@ -7,6 +7,7 @@
   min-height: 100%;
   justify-content: space-between;
   font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
+  font-size: 40rpx;
 }
 
 .page-body {
