--- a/pages/shoppingCar/index.wxss
+++ b/pages/shoppingCar/index.wxss
@@ -43,6 +43,10 @@
   width: 70%;
   background: #fff;
 }
+.sumPrice{
+  color: #FF6319;
+  margin-right: 10rpx;
+}
 .fl_right{
   width: 30%;
   text-align: center;
