--- a/pages/shoppingCar/index.wxml
+++ b/pages/shoppingCar/index.wxml
@@ -2,67 +2,92 @@
 <view class="body_bg"></view>
 <!-- 购物车为空 -->
 
-<!-- <view class="page page_padding">
+ <view wx:if="{{!hasList}}" class="page page_padding">
   <view class="page_header">
     <image src="../../img/shoppingCarK.png"></image>
     <view>购物车还是空的</view>
     <view>去挑选几件中意的商品吧</view>
   </view>
-</view> -->
+</view> 
 
 
 <!-- 购物车结算 -->
-<view class="page padding_b">
+<view wx:if="{{hasList}}" class="page padding_b">
 
   <view class="page__hd title">
     <view class="float_left">
-      <radio color="#FF6319" checked="true" />  全选/取消
-      </view>
-    <view class="page__desc float_right">编辑</view>
+      <radio color="#FF6319" bindtap="selectAll" checked="{{selectAllStatus}}" /> 全选/取消
+    </view>
+    <view class="page__desc float_right" bindtap="changeEditOrComplete">{{editOrComplete}}</view>
   </view>
 
   <view class="page__bd">
     <view class="weui-panel weui-panel_access">
-
       <view class="weui-panel__bd">
-        <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+
+        <view wx:for="{{carts}}" class="weui-media-box weui-media-box_appmsg margin_b">
+          <radio color="#FF6319" checked="{{item.selected}}" bindtap="selectList" data-index="{{index}}"  />
+          <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+            <image class="weui-media-box__thumb" src="{{item.image}}" />
+          </view>
+          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg text_right">
+            <navigator url="../details/details?id={{item.id}}" hover-class="weui-cell_active">
+              <view class="weui-media-box__title">
+                <text class="float_left">{{item.title}}</text>
+                <text>￥{{item.price}}</text>
+              </view>
+            </navigator>
+            <view wx:if="{{editOrComplete==='编辑'}}" class="weui-media-box__title">
+              <!-- <text class="float_left">500ml/瓶</text> -->
+              <text>*{{item.num}}</text>
+            </view>
+
+             <view wx:if="{{editOrComplete==='完成'}}" class='weui-media-box__title'>
+              <view class='details__bottom__buyCard__jz'>
+                <text style='color:rgb(246, 76, 22)'  bindtap="minusCount" data-index="{{index}}">-</text>
+                <text style='color:rgb(135, 135, 135)'>{{item.num}}</text>
+                <text style='color:rgb(246, 76, 22); padding-right:50rpx;' bindtap="addCount" data-index="{{index}}">+</text>
+              </view>
+            </view> 
+
+          </view>
+        </view>
+
+
+        <!-- <view class="weui-media-box weui-media-box_appmsg">
           <radio color="#FF6319" checked="true" />
           <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
             <image class="weui-media-box__thumb" src="{{icon60}}" />
           </view>
           <view class="weui-media-box__bd weui-media-box__bd_in-appmsg text_right">
-            <view class="weui-media-box__title">
-              <text class="float_left">商品名称</text>
-              <text>￥50.00</text> </view>
-            <view class="weui-media-box__title">
+            <navigator url='' hover-class="weui-cell_active">
+              <view class="weui-media-box__title">
+                <text class="float_left">商品名称</text>
+                <text>￥50.00</text>
+              </view>
+            </navigator>
+            <view wx:if="{{editOrComplete==='编辑'}}" class="weui-media-box__title">
               <text class="float_left">500ml/瓶</text>
               <text>*1</text>
             </view>
-          </view>
-        </navigator>
 
+             <view wx:if="{{editOrComplete==='完成'}}" class='weui-media-box__title'>
+              <view class='details__bottom__buyCard__jz'>
+                <text data-status='subtraction' style='color:rgb(246, 76, 22)' bindtap='jzNum'>-</text>
+                <text style='color:rgb(135, 135, 135)'>{{shoppingNumber}}</text>
+                <text data-status='addition' style='color:rgb(246, 76, 22); padding-right:50rpx;' bindtap='jzNum'>+</text>
+              </view>
+            </view> 
 
-        <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
-          <radio color="#FF6319" />
-          <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-            <image class="weui-media-box__thumb" src="{{icon60}}" />
           </view>
-          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg text_right">
-            <view class="weui-media-box__title">
-              <text class="float_left">商品名称</text>
-              <text>￥50.00</text> </view>
-            <view class="weui-media-box__title">
-              <text class="float_left">500ml/瓶</text>
-              <text>*1</text>
-            </view>
-          </view>
-        </navigator>
+        </view> -->
 
         <view class="bottom_way">
           <view class="float_left text_right fl_left">合计￥：
-            <text class="sumPrice">50.00</text>
+            <text class="sumPrice">{{totalPrice}}</text>
           </view>
-          <view class="float_left fl_right">结算</view>
+          <view wx:if="{{editOrComplete==='编辑'}}" class="float_left fl_right" bindtap=''>结算</view>
+          <view wx:if="{{editOrComplete==='完成'}}" class="float_left fl_right delbgColor" bindtap='toDelCount'>删除</view>
         </view>
       </view>
     </view>
