--- a/pages/index/confirm/confirm.wxss
+++ b/pages/index/confirm/confirm.wxss
@@ -1,1 +1,161 @@
 /* pages/index/confirm/confirm.wxss */
+
+.container {
+  background-color: #fff;
+}
+
+.confirm__express__info {
+  width: 100%;
+  height: 100rpx;
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: normal;
+  border-bottom: 1rpx solid #ccc;
+  text-align: right;
+}
+
+.confirm__express__info > text {
+  float: left;
+  line-height: 2.4em;
+  padding-left: 20rpx;
+}
+
+.confirm__express__success {
+  width: 50rpx;
+  height: 50rpx;
+  padding-top: 20rpx;
+  padding-right: 40rpx;
+}
+
+.confirm__address__info {
+  width: 100%;
+  height: 200rpx;
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: normal;
+  border-bottom: 1rpx solid #666;
+}
+
+.confirm__address__info >text {
+  padding-left: 20rpx;
+  line-height: 2.4em;
+}
+
+.confirm__address__tel {
+  padding-left: 50rpx;
+}
+
+.weui-panel {
+  margin-top: 0;
+}
+
+.confirm__shop__info {
+  width: 100%;
+  height: 200rpx;
+  font-size: 35rpx;
+  border-bottom: 1rpx solid #ccc;
+}
+
+.confirm__shop__image {
+  width: 200rpx;
+  height: 150rpx;
+  float: left;
+}
+
+.confirm__shop__image > image {
+  width: 100%;
+  height: 150rpx;
+}
+
+.confirm__shop__name {
+  float: left;
+  width: 350rpx;
+  padding-left: 15rpx;
+}
+
+.confirm__shop__num {
+  float: right;
+  width: 180rpx;
+  text-align: center;
+}
+
+.details__bottom__buyCard__num {
+  width: 100%;
+  height: 100rpx;
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: normal;
+  border-bottom: 1rpx solid #ccc;
+}
+
+.details__bottom__buyCard__text {
+  line-height: 2.4em;
+  padding-left: 20rpx;
+}
+
+.details__bottom__buyCard__jz {
+  float: right;
+}
+
+.details__bottom__buyCard__jz > text {
+  line-height: 2.4em;
+  padding-left: 30rpx;
+  padding-right: 30rpx;
+}
+
+.confirm__coupon {
+  width: 100%;
+  height: 60rpx;
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: normal;
+}
+
+.confirm__coupon__text {
+  float: left;
+  padding-left: 20rpx;
+}
+
+.confirm__coupon__num {
+  float: right;
+  padding-right: 20rpx;
+}
+
+.confirm__bottom {
+  width: 100%;
+  height: 100rpx;
+  position: fixed;
+  bottom: 0;
+  background-color: rgb(246, 76, 22);
+}
+.confirm__bottom > view {
+  text-align: center;
+  height: 100rpx;
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: normal;
+  z-index: 0;
+}
+
+
+.confirm__bottom__left {
+  width: 70%;
+  background-color: white;
+  line-height: 2.4em;
+}
+.confirm__bottom__right {
+  width: 30%;
+  line-height: 2.4em;
+  color: white;
+  
+}
